--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,3 +29,7 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: rgb(176, 70, 50);
 }
+
+.fontgill {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
