--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,6 +30,6 @@ body {
   background-color: rgb(176, 70, 50);
 }
 
-.fontgill {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+input {
+  font-family: "Gill Sans MT";
 }
