--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,6 +11,12 @@
   margin-bottom: 8px;
 }
 
+.cardUI {
+  display: "flex";
+  flex-direction: "column";
+  padding: "6px 6px 6px 6px";
+}
+
 .appContainer {
   margin-left: 8px;
 }
@@ -26,10 +32,10 @@
 }
 
 body {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Gill Sans MT";
   background-color: rgb(176, 70, 50);
 }
 
-input {
+.customfont {
   font-family: "Gill Sans MT";
 }
